# fastapi_test

./: main.py  pyproject.toml
