[tool.poetry]
name = "fastapi_test"
version = "0.1.0"
description = ""
authors = ["kouya.hirata <atarih.ayuok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
